test/invalid/baseline/nonnullableobjects.txt
Syntax error at line 4 in nonnullableobjects.widl, since `interface NonNullable`:
  attribute Foo??
                ^ Can't nullable more than once
